# london-property-hunt-gpt

./: LICENSE  README.md  config.example.toml  pyproject.toml
src/property_hunt/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py  scoring.py
src/property_hunt/collectors/: __init__.py  base.py  rightmove.py  text_platform.py  zoopla.py
src/property_hunt/email/: __init__.py  gmail.py  render.py
src/property_hunt/llm/: __init__.py  client.py  extract.py  outreach.py
src/property_hunt/tracker/: __init__.py  xlsx.py
tests/: test_config.py  test_parsers.py  test_scoring.py
tests/fixtures/: rightmove.html  zoopla.html
