[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "london-property-hunt-openai"
version = "0.1.0"
description = "OpenAI-powered London rental search, tracking, outreach, and email summaries."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "openai>=2.0.0",
  "openpyxl>=3.1.0",
  "playwright>=1.48.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[project.scripts]
property-hunt = "property_hunt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

